--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,6 +1,8 @@
 ---
+import Footer from '@/components/Footer.astro';
+import Header from '@/components/Header.astro';
+import Menu from '@/components/Menu.astro';
 import i18next from "i18next";
-import Footer from "./Footer.astro";
 interface Props {
 	title: string;
 }
@@ -18,7 +20,11 @@ const { title } = Astro.props;
 	</head>
 	<body class="font-sans"/>
 	<body>
-		<slot />
+		<Header />
+		<div class="flex gap-4 lg:h-[90vh] h-[85vh]">
+				<Menu />
+				<slot />
+		</div>
 		<Footer />
 	</body>
 </html>
