wip: menu and routes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,6 @@
 ---
+import MenuMobile from './MenuMobile.astro';
+
 
 ---
-<header class="flex justify-between items-center gap-4 lg:hidden">
-  <div>LOGO</div>
-  <div>MENU</div>
-</header>
+<MenuMobile />
