--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,13 @@
 ---
-import { Icon } from 'astro-icon/components'
+import SocialMedias from './SocialMedias.astro'
 
 const socialMedias = ["x", "ig", "spotfy", "youtube"]
 ---
-<footer class="flex flex-col items-center gap-4">
-  <div class="flex flex-row gap-4 lg:hidden">
-    {socialMedias.map((el) => (
-      <button><Icon name={el} /></button>
-    ))}
-  </div>
-  <p class="uppercase">Copyright 2024 © Grioh Games</p>
+<footer>
+    <div class="flex flex-col items-center justify-center gap-4 h-[10vh]">
+      <div class="lg:hidden">
+        <SocialMedias />
+      </div>
+      <p class="uppercase">Copyright 2024 © Grioh Games</p>
+  </div>  
 </footer>
