--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,7 +1,7 @@
 ---
 import Footer from '@/components/Footer.astro';
 import Header from '@/components/Header.astro';
-import Menu from '@/components/Menu.astro';
+import MenuDesktop from '@/components/MenuDesktop.astro';
 import i18next from "i18next";
 interface Props {
 	title: string;
@@ -14,6 +14,7 @@ const { title } = Astro.props;
 <html lang={i18next.language}>
 	<head>
 		<meta charset="UTF-8" />
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>{title}</title>
@@ -22,8 +23,10 @@ const { title } = Astro.props;
 	<body>
 		<Header />
 		<div class="flex gap-4 lg:h-[90vh] h-[85vh]">
-				<Menu />
-				<slot />
+				<MenuDesktop />
+				<main class="bg-ghostWhite w-full py-12 pl-11 pr-64">
+					<slot />
+				</main>
 		</div>
 		<Footer />
 	</body>
@@ -37,7 +40,6 @@ const { title } = Astro.props;
 		color: #fff;
 	}
 	body {
-		margin: 48px;
 		-webkit-text-size-adjust: none;
 		-ms-text-size-adjust: none;
 		-webkit-font-smoothing: antialiased;
