--- a/src/components/MenuDesktop.astro
+++ b/src/components/MenuDesktop.astro
@@ -1,24 +1,32 @@
 ---
-import { Icon } from 'astro-icon/components';
-import SocialMedias from './SocialMedias.astro';
+import { Icon } from 'astro-icon/components'
+import SocialMedias from './SocialMedias.astro'
 
 import { MenuItens } from '../data/menu'
 
+const currentPage = Astro.url.pathname
 ---
 
-<nav class="lg:flex lg:flex-col lg:gap-12 lg:my-12 lg:ml-40 lg:pr-10 hidden">
+<nav class="hidden lg:my-12 lg:ml-40 lg:flex lg:flex-col lg:gap-12 lg:pr-10">
 	<div>
-		<Icon name='logo_desktop' size={180}/>
+		<Icon name="logo_desktop" size={180} />
 
-		<ul class="flex flex-col gap-4 mt-12 mb-36">
-			{MenuItens.map((el) => (
+		<ul class="mb-36 mt-12 flex flex-col gap-4">
+			{
+				MenuItens.map((el) => (
 					<a href={el.router}>
-						<li class="flex items-center py-2 px-4 gap-2 align-center rounded-full hover:bg-white hover:text-primary">
-								<Icon class="hover:text-primary" name={el.icon} size={22}/>
-								<p class="uppercase text-2xl font-bold ">{el.name}</p>
+						<li
+							class:list={[
+								'align-center flex items-center gap-2 rounded-full px-4 py-2 hover:bg-white hover:text-primary',
+								currentPage === el.router && 'bg-white text-primary'
+							]}
+						>
+							<Icon class="hover:text-primary" name={el.icon} size={22} />
+							<p class="text-2xl font-bold uppercase">{el.name}</p>
 						</li>
 					</a>
-			))}
+				))
+			}
 		</ul>
 
 		<SocialMedias />
