feat: add prettier

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,14 @@
 ---
 import SocialMedias from './SocialMedias.astro'
 
-const socialMedias = ["x", "ig", "spotfy", "youtube"]
+const socialMedias = ['x', 'ig', 'spotfy', 'youtube']
 ---
+
 <footer>
-    <div class="flex flex-col items-center justify-center gap-4 h-[10vh]">
-      <div class="lg:hidden">
-        <SocialMedias />
-      </div>
-      <p class="uppercase">Copyright 2024 © Grioh Games</p>
-  </div>  
+  <div class="flex flex-col items-center justify-center gap-4 h-[10vh]">
+    <div class="lg:hidden">
+      <SocialMedias />
+    </div>
+    <p class="uppercase">Copyright 2024 © Grioh Games</p>
+  </div>
 </footer>
