--- a/src/layouts/Podcast.astro
+++ b/src/layouts/Podcast.astro
@@ -1,10 +1,9 @@
 ---
-import { t } from "i18next";
+import { t } from 'i18next'
 
-import Base from "./Base.astro";
-
+import Base from './Base.astro'
 ---
 
-<Base title={t("wellcome")}>
+<Base title={t('wellcome')}>
   <h1 class="text-black text-3xl">Grioh Cast</h1>
 </Base>
