--- a/src/pages/contato/index.astro
+++ b/src/pages/contato/index.astro
@@ -1,9 +1,8 @@
 ---
-import Contato from '@/layouts/Contato.astro';
-import { changeLanguage } from "i18next";
+import Contato from '@/layouts/Contato.astro'
+import { changeLanguage } from 'i18next'
 
-
-changeLanguage("pt-br");
+changeLanguage('pt-br')
 ---
 
 <Contato />
