--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import { changeLanguage } from "i18next";
-import Home from "@/layouts/Home.astro";
+import { changeLanguage } from 'i18next'
+import Home from '@/layouts/Home.astro'
 
-changeLanguage("pt");
+changeLanguage('pt')
 ---
 
 <Home />
