--- a/src/pages/jogos/index.astro
+++ b/src/pages/jogos/index.astro
@@ -1,9 +1,8 @@
 ---
-import Jogos from '@/layouts/Jogos.astro';
-import { changeLanguage } from "i18next";
+import Jogos from '@/layouts/Jogos.astro'
+import { changeLanguage } from 'i18next'
 
-
-changeLanguage("pt-br");
+changeLanguage('pt-br')
 ---
 
 <Jogos />
