--- a/src/pages/podcast/index.astro
+++ b/src/pages/podcast/index.astro
@@ -1,9 +1,8 @@
 ---
-import Podcast from '@/layouts/Podcast.astro';
-import { changeLanguage } from "i18next";
+import Podcast from '@/layouts/Podcast.astro'
+import { changeLanguage } from 'i18next'
 
-
-changeLanguage("pt-br");
+changeLanguage('pt-br')
 ---
 
 <Podcast />
