--- a/src/pages/sobre/index.astro
+++ b/src/pages/sobre/index.astro
@@ -1,9 +1,8 @@
 ---
-import Sobre from '@/layouts/Sobre.astro';
-import { changeLanguage } from "i18next";
+import Sobre from '@/layouts/Sobre.astro'
+import { changeLanguage } from 'i18next'
 
-
-changeLanguage("pt-br");
+changeLanguage('pt-br')
 ---
 
 <Sobre />
