--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -1,9 +1,9 @@
 ---
-import { t } from "i18next";
+import { t } from 'i18next'
 
-import Base from "@/layouts/Base.astro";
+import Base from '@/layouts/Base.astro'
 ---
 
-<Base title={t("wellcome")}>
+<Base title={t('wellcome')}>
   <h1 class="text-black text-3xl">Boas vindas</h1>
 </Base>
