--- a/src/pages/en.astro
+++ b/src/pages/en.astro
@@ -1,8 +1,8 @@
 ---
-import Home from "@/layouts/Home.astro";
-import { changeLanguage } from "i18next";
+import Home from '@/layouts/Home.astro'
+import { changeLanguage } from 'i18next'
 
-changeLanguage("en");
+changeLanguage('en')
 ---
 
 <Home />
