--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -5,5 +5,5 @@ import Base from '@/layouts/Base.astro'
 ---
 
 <Base title={t('wellcome')}>
-  <h1 class="text-black text-3xl">Boas vindas</h1>
+	<h1 class="mb-8 text-[64px] font-semibold text-black">Boas vindas</h1>
 </Base>
