--- a/src/layouts/Podcast.astro
+++ b/src/layouts/Podcast.astro
@@ -5,5 +5,5 @@ import Base from './Base.astro'
 ---
 
 <Base title={t('wellcome')}>
-  <h1 class="text-black text-3xl">Grioh Cast</h1>
+	<h1 class="mb-8 text-[64px] font-semibold text-black">Grioh Cast</h1>
 </Base>
