--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,12 @@
 ---
 import SocialMedias from './SocialMedias.astro'
-
-const socialMedias = ['x', 'ig', 'spotfy', 'youtube']
 ---
 
 <footer>
-  <div class="flex flex-col items-center justify-center gap-4 h-[10vh]">
-    <div class="lg:hidden">
-      <SocialMedias />
-    </div>
-    <p class="uppercase">Copyright 2024 © Grioh Games</p>
-  </div>
+	<div class="flex h-[10vh] flex-col items-center justify-center gap-4">
+		<div class="lg:hidden">
+			<SocialMedias />
+		</div>
+		<p class="uppercase">Copyright 2024 © Grioh Games</p>
+	</div>
 </footer>
