--- a/src/layouts/Sobre.astro
+++ b/src/layouts/Sobre.astro
@@ -5,5 +5,34 @@ import Base from './Base.astro'
 ---
 
 <Base title={t('wellcome')}>
-  <h1 class="text-black text-3xl">Manifesto Grioh Games</h1>
+	<div class="mb-12 text-[22px] text-black">
+		<h1 class="mb-8 text-[32px] font-semibold text-black lg:text-[64px]">Manifesto Grioh Games</h1>
+
+		<p>
+			Somos mais que uma empresa de games. Somos um estúdio de jogos digitais acessíveis formado por
+			uma equipe diversa.
+		</p>
+		<br />
+		<p>
+			Entendemos que cada pessoa jogadora é única e suas necessidades também, por isso criamos games
+			para que a maioria delas seja capaz de jogar plenamente, independente de suas condições.
+		</p>
+		<br />
+		<p>
+			Acreditamos na diversidade, na inclusão, no respeito, na tolerância, na responsabilidade
+			social e na empatia. Mas não só isso. Valorizamos e fomentamos a cultura nacional e
+			regionalista, defendendo sua importância para a educação e para a celebração do que é nosso.
+		</p>
+		<br />
+		<p>
+			Somos flexíveis, fluídos e horizontais, nos moldando aos novos cenários de diversão e aos
+			nossos parceiros, clientes e jogadores, sem abandonar as raízes e o nosso porquê.
+		</p>
+		<br />
+		<p>Somos a Grioh e contamos histórias por meio de jogos para o hoje e o amanhã.</p>
+	</div>
+
+	<div>
+		<h2 class="mb-8 text-3xl font-semibold text-primary">Nosso time</h2>
+	</div>
 </Base>
