--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import SocialMedias from './SocialMedias.astro'
 ---
 
 <footer>
-	<div class="flex h-[10vh] flex-col items-center justify-center gap-4">
+	<div class="relative z-20 flex h-[10vh] flex-col items-center justify-center gap-4">
 		<div class="lg:hidden">
 			<SocialMedias />
 		</div>
