--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props
 	</head>
 	<body class="font-sans">
 		<Header />
-		<div class="flex min-h-[80vh] gap-4 lg:h-[90vh]">
+		<div class="flex min-h-[80vh] gap-4 lg:min-h-[90vh]">
 			<MenuDesktop />
 			<main class="w-full bg-ghostWhite px-4 py-4 lg:py-12 lg:pl-11 lg:pr-64">
 				<slot />
