--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -2,8 +2,42 @@
 import { t } from 'i18next'
 
 import Base from '@/layouts/Base.astro'
+import Card from '@/components/Card.astro'
 ---
 
 <Base title={t('wellcome')}>
 	<h1 class="mb-8 text-[64px] font-semibold text-black">Boas vindas</h1>
+
+	<div class="mb-12 flex w-full">
+		<Card
+			size="large"
+			image="/img/site-home-bodyguards.jpg"
+			title="Bodyguards"
+			content="Bodyguards é um jogo de ação shoot em up em duas dimensões na qual uma nave espacial defende o corpo humano de terríveis invasores patógenos em diferentes sistemas planetários."
+		/>
+	</div>
+
+	<div class="flex flex-col gap-12 md:flex-row">
+		<div class="flex w-full flex-col gap-12 md:w-auto">
+			<Card
+				image="/img/site-home-games.jpg"
+				title="Jogos"
+				content="Conheça nossos jogos em desenvolvimento!"
+			/>
+
+			<Card
+				image="/img/site-home-logo.jpg"
+				title="Conheça nosso Estúdio!"
+				content="Grioh Games é um pequeno e independente estúdio de jogos fundado por Fernando Fernandes e Felipe Oliveira que são encantados com a cultura brasileira, amantes de jogos e acessibilidade."
+			/>
+		</div>
+
+		<div class="flex w-full flex-col md:w-1/2">
+			<Card
+				image="/img/site-home-cast.jpg"
+				title="Grioh Cast"
+				content="Grioh Cast é um podcast que lança um olhar sobre a diversidade em jogos"
+			/>
+		</div>
+	</div>
 </Base>
