--- a/src/layouts/Jogos.astro
+++ b/src/layouts/Jogos.astro
@@ -6,7 +6,7 @@ import Card from '@/components/Card.astro'
 ---
 
 <Base title={t('wellcome')}>
-	<h1 class="mb-8 text-[64px] font-semibold text-black">Nossos jogos</h1>
+	<h1 class="mb-8 text-[32px] font-semibold text-black lg:text-[64px]">Nossos jogos</h1>
 
 	<Card size="large" image="/img/site-games-bodyguard.jpg" alt="bodyguards game logo" />
 </Base>
