--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,7 +11,7 @@ const { image, title, content, size = 'small', style = '', alt } = Astro.props
 const hasText = title || content
 ---
 
-<div class={`card ${size === 'small' ? 'card-small' : 'card-big'} ${style}`}>
+<div class={`card ${size === 'small' ? 'lg:w-[294px] h-auto' : 'max-w-[640px] h-auto'} ${style}`}>
 	<img
 		class={`${hasText ? 'rounded-t-[15px]' : 'rounded-[15px]'}`}
 		src={image}
@@ -20,7 +20,7 @@ const hasText = title || content
 	{
 		hasText ? (
 			<div class="content bg-primary">
-				<h2 class="mb-2 text-[32px] font-bold">{title}</h2>
+				<h2 class={`mb-2 ${size === 'small' ? '' : 'text-[32px]'} font-bold`}>{title}</h2>
 				<p class="text-[16px]">{content}</p>
 			</div>
 		) : null
@@ -36,15 +36,5 @@ const hasText = title || content
 			border-radius: 0px 0px 15px 15px;
 			padding: 1.5rem;
 		}
-	}
-
-	.card-small {
-		max-width: 398px;
-		height: fit-content;
-	}
-
-	.card-big {
-		max-width: 693px;
-		height: fit-content;
 	}
 </style>
