--- a/src/layouts/Contato.astro
+++ b/src/layouts/Contato.astro
@@ -7,7 +7,7 @@ import SocialMedias from '@/components/SocialMedias.astro'
 
 <Base title={t('wellcome')}>
 	<div class="mb-12">
-		<h1 class="mb-8 text-[64px] font-semibold text-black">Contato</h1>
+		<h1 class="mb-8 text-[32px] font-semibold text-black lg:text-[64px]">Contato</h1>
 
 		<p class="my-4 text-[24px] text-black">
 			Você pode entrar em contato conosco pelos e-mails <u>griohgames@gmail.com</u> ou
