edit image paths

--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -11,7 +11,7 @@ import Card from '@/components/Card.astro'
 	<div class="mb-12 flex w-full">
 		<Card
 			size="large"
-			image="/img/site-home-bodyguards.jpg"
+			image="./img/site-home-bodyguards.jpg"
 			title="Bodyguards"
 			content="Bodyguards é um jogo de ação shoot em up em duas dimensões na qual uma nave espacial defende o corpo humano de terríveis invasores patógenos em diferentes sistemas planetários."
 		/>
@@ -20,12 +20,12 @@ import Card from '@/components/Card.astro'
 	<div class="flex flex-col gap-12 md:flex-row">
 		<div class="flex w-full flex-col gap-12 md:w-auto">
 			<Card
-				image="/img/site-home-games.jpg"
+				image="./img/site-home-games.jpg"
 				title="Jogos"
 				content="Conheça nossos jogos em desenvolvimento!"
 			/>
 			<Card
-				image="/img/site-home-cast.jpg"
+				image="./img/site-home-cast.jpg"
 				title="Grioh Cast"
 				content="Grioh Cast é um podcast que lança um olhar sobre a diversidade em jogos"
 			/>
@@ -33,7 +33,7 @@ import Card from '@/components/Card.astro'
 
 		<div class="flex w-full flex-col md:w-1/2">
 			<Card
-				image="/img/site-home-logo.jpg"
+				image="./img/site-home-logo.jpg"
 				title="Conheça nosso Estúdio!"
 				content="Grioh Games é um pequeno e independente estúdio de jogos fundado por Fernando Fernandes e Felipe Oliveira que são encantados com a cultura brasileira, amantes de jogos e acessibilidade."
 			/>
