--- a/src/layouts/Jogos.astro
+++ b/src/layouts/Jogos.astro
@@ -8,5 +8,5 @@ import Card from '@/components/Card.astro'
 <Base title={t('wellcome')}>
 	<h1 class="mb-8 text-[32px] font-semibold text-black lg:text-[64px]">Nossos jogos</h1>
 
-	<Card size="large" image={'images/site-games-bodyguard.jpg'} alt="bodyguards game logo" />
+	<Card size="large" image="/images/site-games-bodyguard.jpg" alt="bodyguards game logo" />
 </Base>
