fix url of images

--- a/src/layouts/Sobre.astro
+++ b/src/layouts/Sobre.astro
@@ -7,12 +7,12 @@ const founders = [
 	{
 		name: 'Fernando Fernandes',
 		role: 'Fundador e Game Designer',
-		img: 'images/fernando.png'
+		img: '/images/fernando.png'
 	},
 	{
 		name: 'Felipe Oliveira',
 		role: 'Fundador e Roteirista',
-		img: 'images/felipe.png'
+		img: '/images/felipe.png'
 	}
 ]
 ---
