--- a/src/layouts/Podcast.astro
+++ b/src/layouts/Podcast.astro
@@ -32,7 +32,7 @@ const episodies = [
 	<h1 class="mb-8 text-[32px] font-semibold text-black lg:text-[64px]">Grioh Cast</h1>
 
 	<div class="flex flex-col gap-9">
-		<img src="images/grioh-cast.jpg" width="638" alt="grioh cast" />
+		<img src="/images/grioh-cast.jpg" width="638" alt="grioh cast" />
 
 		<p class="text-black">
 			Grioh Cast é um podcast que lança um olhar sobre a diversidade em jogos, trazendo debates
