update image sizes

--- a/src/components/SocialMedias.astro
+++ b/src/components/SocialMedias.astro
@@ -2,10 +2,10 @@
 import { Icon } from 'astro-icon/components'
 
 const socialMedias = [
-	{ name: 'x', color: '#000' },
+	{ name: 'linkedin', color: '#0078D4' },
 	{ name: 'ig', color: '#E1306C' },
-	{ name: 'spotfy', color: '#1ED760' },
-	{ name: 'youtube', color: '#FF0000' }
+	{ name: 'youtube', color: '#FF0000' },
+	{ name: 'spotfy', color: '#1ED760' }
 ]
 
 const { isColored = false } = Astro.props
