--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -33,7 +33,7 @@ import Card from '@/components/Card.astro'
 
 		<div class="flex w-full flex-col md:w-1/2">
 			<Card
-				image="/images/site-home-logo.jpg"
+				image="/images/site-home-logo2.jpg"
 				title="Conheça nosso Estúdio!"
 				content="Grioh Games é um pequeno e independente estúdio de jogos fundado por Fernando Fernandes e Felipe Oliveira que são encantados com a cultura brasileira, amantes de jogos e acessibilidade."
 			/>
