--- a/src/layouts/Podcast.astro
+++ b/src/layouts/Podcast.astro
@@ -32,7 +32,7 @@ const episodies = [
 	<h1 class="mb-8 text-[32px] font-semibold text-black lg:text-[64px]">Grioh Cast</h1>
 
 	<div class="flex flex-col gap-9">
-		<img src="/images/grioh-cast.jpg" width="638" alt="grioh cast" />
+		<img src="/images/grioh-cast.jpg" width="638" alt="grioh cast" class="rounded-2xl" />
 
 		<p class="text-black">
 			Grioh Cast é um podcast que lança um olhar sobre a diversidade em jogos, trazendo debates
@@ -49,12 +49,7 @@ const episodies = [
 			<div class="align-center flex gap-7">
 				<p class="text-[22px] text-gray">ou ouça no</p>
 				<div class="flex items-center gap-2">
-					<Icon name="deezer" size={21} />
-					<Icon name="soundcloud" size={28} />
-					<Icon name="youtube" color="#FF0000" size={23} />
 					<Icon name="spotfy" color="#1ED760" size={24} />
-					<Icon name="apple_podcast" size={23} />
-					<Icon name="google_podcast" size={23} />
 				</div>
 			</div>
 		</div>
