--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,12 +11,9 @@ const { image, title, content, size = 'small', style = '', alt } = Astro.props
 const hasText = title || content
 ---
 
-<div class={`card ${size === 'small' ? 'lg:w-[294px] h-auto' : 'max-w-[640px] h-auto'} ${style}`}>
-	<img
-		class={`${hasText ? 'rounded-t-[15px]' : 'rounded-[15px]'}`}
-		src={image}
-		alt={alt || title}
-	/>
+<div class={`card ${size === 'small' ? 'lg:w-[380px] h-auto' : 'max-w-[800px] h-auto'} ${style}`}>
+	<img class={`${hasText ? 'rounded-t-2xl' : 'rounded-2xl'}`} src={image} alt={alt || title} />
+
 	{
 		hasText ? (
 			<div class="content bg-primary">
