--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -10,6 +10,7 @@ import Card from '@/components/Card.astro'
 
 	<div class="mb-12 flex w-full">
 		<Card
+			path="/jogos/bodyguards"
 			size="large"
 			image="/images/site-home-bodyguards.jpg"
 			title="Bodyguards"
@@ -20,11 +21,13 @@ import Card from '@/components/Card.astro'
 	<div class="flex flex-col gap-12 md:flex-row">
 		<div class="flex w-full flex-col gap-12 md:w-auto">
 			<Card
+				path="/jogos"
 				image="/images/site-home-games.jpg"
 				title="Jogos"
 				content="Conheça nossos jogos em desenvolvimento!"
 			/>
 			<Card
+				path="/podcast"
 				image="/images/site-home-cast.jpg"
 				title="Grioh Cast"
 				content="Grioh Cast é um podcast que lança um olhar sobre a diversidade em jogos"
@@ -33,6 +36,7 @@ import Card from '@/components/Card.astro'
 
 		<div class="flex w-full flex-col md:w-1/2">
 			<Card
+				path="/sobre"
 				image="/images/site-home-logo2.jpg"
 				title="Conheça nosso Estúdio!"
 				content="Grioh Games é um pequeno e independente estúdio de jogos fundado por Fernando Fernandes e Felipe Oliveira que são encantados com a cultura brasileira, amantes de jogos e acessibilidade."
