--- a/src/components/MenuDesktop.astro
+++ b/src/components/MenuDesktop.astro
@@ -5,6 +5,7 @@ import SocialMedias from './SocialMedias.astro'
 import { MenuItens } from '../data/menu'
 
 const currentPage = Astro.url.pathname
+console.log(currentPage)
 ---
 
 <nav class="hidden lg:my-12 lg:ml-40 lg:flex lg:flex-col lg:gap-12 lg:pr-10">
@@ -17,8 +18,11 @@ const currentPage = Astro.url.pathname
 					<a href={el.router}>
 						<li
 							class:list={[
-								'align-center flex items-center gap-2 rounded-full px-4 py-2 hover:bg-white hover:text-primary',
-								currentPage === el.router && 'bg-white text-primary'
+								(el.name === 'Início' && currentPage === '/') ||
+								(currentPage.includes(el.router) && el.name !== 'Início')
+									? 'bg-white text-primary'
+									: '',
+								'align-center flex items-center gap-2 rounded-full px-4 py-2 hover:bg-white hover:text-primary'
 							]}
 						>
 							<Icon class="hover:text-primary" name={el.icon} size={22} />
