--- a/src/layouts/Jogos.astro
+++ b/src/layouts/Jogos.astro
@@ -12,6 +12,6 @@ import Card from '@/components/Card.astro'
 		size="large"
 		image="/images/site-games-bodyguard.jpg"
 		alt="bodyguards game logo"
-		path="/jogos/bodyguards"
+		path="/bodyguards"
 	/>
 </Base>
