--- a/src/components/SocialMedias.astro
+++ b/src/components/SocialMedias.astro
@@ -5,7 +5,7 @@ import { navigate } from 'astro:transitions/client'
 const socialMedias = [
 	{ name: 'linkedin', color: '#0078D4', link: 'https://www.linkedin.com/company/grioh-games' },
 	{ name: 'ig', color: '#E1306C', link: 'https://www.instagram.com/griohgames/' },
-	{ name: 'youtube', color: '#FF0000', link: '' },
+	{ name: 'youtube', color: '#FF0000', link: 'https://www.youtube.com/@griohgames' },
 	{ name: 'spotfy', color: '#1ED760', link: '' }
 ]
 
@@ -15,9 +15,9 @@ const { isColored = false } = Astro.props
 <div class="mx-4 flex flex-row gap-4">
 	{
 		socialMedias.map((el) => (
-			<button>
-				<Icon name={el.name} color={isColored ? el.color : '#fff'} />
-			</button>
+			<a href={el.link} target="_blank">
+				<Icon name={el.name} size={22} color={isColored ? el.color : '#fff'} />
+			</a>
 		))
 	}
 </div>
