remove unused image and add max size

--- a/src/layouts/Bodyguards.astro
+++ b/src/layouts/Bodyguards.astro
@@ -13,7 +13,7 @@ import Base from './Base.astro'
 		<h1 class="mb-8 text-[32px] font-bold text-black lg:text-[64px]">BodyGuards</h1>
 
 		<Gallery
-			mainImage="/images/site-games-bodyguard-main.png"
+			mainImage="/images/site-games-bodyguard-main.jpg"
 			otherImages={[
 				'/images/site-games-bodyguard-aux1.png',
 				'/images/site-games-bodyguard-aux2.png',
