--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -8,8 +8,8 @@ interface Props {
 const { mainImage, otherImages } = Astro.props
 ---
 
-<div class="my-8 flex w-auto flex-col lg:mr-40">
-	<img src={mainImage} alt="main image" />
+<div class="my-8 flex w-auto max-w-[900px] flex-col lg:mr-40">
+	<img src={mainImage} alt="main image" class="rounded" />
 	<div class="my-8 hidden flex-row justify-center gap-10 lg:flex">
 		{otherImages?.map((el) => <img src={el} width="180" alt="mini images" />)}
 	</div>
