add spotfy link

--- a/src/components/SocialMedias.astro
+++ b/src/components/SocialMedias.astro
@@ -6,7 +6,11 @@ const socialMedias = [
 	{ name: 'linkedin', color: '#0078D4', link: 'https://www.linkedin.com/company/grioh-games' },
 	{ name: 'ig', color: '#E1306C', link: 'https://www.instagram.com/griohgames/' },
 	{ name: 'youtube', color: '#FF0000', link: 'https://www.youtube.com/@griohgames' },
-	{ name: 'spotfy', color: '#1ED760', link: '' }
+	{
+		name: 'spotfy',
+		color: '#1ED760',
+		link: 'https://open.spotify.com/user/31p6yg3dkzd6nvsfghpiny4opv5y?si=seUiCdfbS6mujT3907kZEA'
+	}
 ]
 
 const { isColored = false } = Astro.props
