--- a/src/layouts/Podcast.astro
+++ b/src/layouts/Podcast.astro
@@ -43,7 +43,11 @@ const episodies = [
 		<div class="flex flex-col justify-between lg:flex-row">
 			<div class="flex items-center gap-3">
 				<Icon name="play" size={32} />
-				<a class="text-black underline" href="">Ouça agora</a>
+				<a
+					class="text-black underline"
+					target="_blank"
+					href="https://open.spotify.com/show/4I8sKZmpvc7Ndh8Q6dgrXz">Ouça agora</a
+				>
 			</div>
 
 			<div class="align-center flex gap-7">
